k8s/21-order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: order-service:k8s
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
          resources:
            requests:
              cpu: 150m
              memory: 384Mi
            limits:
              cpu: 500m
              memory: 768Mi
          startupProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8082
            failureThreshold: 30
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8082
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8082
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: ecommerce
spec:
  selector:
    app: order-service
  ports:
    - port: 8082
      targetPort: 8082
